Fixes
Fixed bookmark DMs icon being too small for quick glancing.

--- a/minicord-theme.css
+++ b/minicord-theme.css
@@ -2,7 +2,7 @@
  * @name Minicord
  * @description Shrinks and/or minimizes discord elements.
  * @author BranFlakes
- * @version 8.4.12
+ * @version 8.4.13
  * @invite
  * @website
  * @source https://github.com/NewBranFlakes/minicord
@@ -2900,6 +2900,7 @@ div[style='height: 8px;'] {
 /* Move bookmark folder content's server icon to the front */
 .iconContainer_c1e9c4 {
     margin: 0px !important;
+    padding: 0px !important;
 }
 .iconContainer_c1e9c4:has(.vc-channeltabs-bookmark-icon),
 .iconContainer_c1e9c4:has(.wrapper__44b0c) {
@@ -2918,9 +2919,15 @@ div[style='height: 8px;'] {
     font-size: 14px !important;
     line-height: 14px !important;
 }
-.iconContainer_c1e9c4 .vc-channeltabs-bookmark-icon {
+.iconContainer_c1e9c4 .vc-channeltabs-bookmark-icon,
+.iconContainer_c1e9c4 .wrapper__44b0c,
+.iconContainer_c1e9c4 .wrapper__44b0c svg {
     width: 100% !important;
     height: 100% !important;
+}
+.iconContainer_c1e9c4:has(.wrapper__44b0c) {
+    width: 20px !important;
+    height: 20px !important;
 }
 
 /* More responsive submenu for bookmark folder content options */
